Make function search for words

--- a/src/CustomVisionTest/Template.Local.App.config
+++ b/src/CustomVisionTest/Template.Local.App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="CustomAIPredictionKey" value="1633...." />
-    <add key="Endpoint" value="https://westeurope.api.cognitive.microsoft.com"/>
-    <add key="ProjectId" value="d4930ece-bfd9-....."/>
+    <add key="CustomVisionAIEndpoint" value="https://westeurope.api.cognitive.microsoft.com"/>
+    <add key="CustomVisionAIProjectId" value="d4930ece-bfd9-....."/>
   </appSettings>
 </configuration>
